2012-09-21 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh.devel (CygbuildPatchFileList): Replace complex
	find command with simple *.patch search under
	$CYGBUILD_DIR_CYGPATCH_RELATIVE

	* bin/cygbuild.sh (CygbuildPatchFileList): Correct
	search from *patch to *.patch.

2012-09-19 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl:
	(Help::EVERYTHING): Remove all shell prefix charcters '$'.
	(Help::Preparation commands::files): Update .tmp to .ex suffix.
	(Help::OPTIONS): Move -h, -V to the end of options. GNU standard.
	(Help::OPTIONAL EXTERNAL DIRECTORIES): Remove. The comment tag "#
	cyginstdir: " is no longer supported in scrips. Use file
	install.lst instead.

2012-02-18 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallMain): Fix call to
	CygbuildCmdDeleteListExists().

2012-02-11 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (Help::OPTIONAL EXTERNAL FILES): Document
	delete.lst file. Move --help option to the end. Document --xz
	option.

	* bin/cygbuild.sh (CygbuildCmdDeleteListExists): New.
	(CygbuildCmdInstallList): Correct variable name to "retval".
	(CygbuildCmdDeleteList): New.
	(CygbuildDefineGlobalMain): New variable set SCRIPT_DELETE_LST_CYGFILE.

2012-02-04 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/template/clean.sh.ex: New.

	* bin/cygbuild.sh (CygbuildDefineGlobalMain): Add SCRIPT_CLEAN_CYGFILE,
	SCRIPT_DISTCLEAN_CYGFILE.
	(CygbuildCmdCleanMain): Add support for custom clean.sh, distclean.sh

2012-02-01 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildTarOptionCompress): Add XZ support. Correct
	LZMA support.
	(CygbuildCommandMain): Add option --xz.
	(CygbuildCompress): Add XZ support.
	(CygbuildTarOptionInUse): New.
	(CygbuildStrRemoveExt): Add XZ support.
	(CygbuildCygbuildDefineGlobalSrcOrigGuess): Add XZ support.
	(CygbuildInstallExtraManualCompress): Add XZ support.
	(CygbuildFilePackageGuessMain): In call to CygbuildFilePackageGuessArchive(),